processed/jira/txt/LU/LU-19080.txt
Key:        LU-19080
Summary:    ll_shrinker_create() does not compile for 5.14.0-503.40.1
Link:       https://jira.whamcloud.com/browse/LU-19080
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   James A Simmons
Reporter:   Vladimir Saveliev
Created:    Mon, 2 Jun 2025 12:06:11 +0000
Updated:    Wed, 20 Aug 2025 12:50:01 +0000
Resolved:   Wed, 20 Aug 2025 12:50:01 +0000

--- Description ---
CC [M]  /home/vs/whamcloud/lustre-release/libcfs/libcfs/../../lustre_compat/mm/shrinker_debug.o
In file included from ./include/linux/build_bug.h:5,
                 from ./include/linux/bits.h:23,
                 from ./include/linux/bitops.h:6,
                 from ./include/linux/radix-tree.h:11,
                 from ./include/linux/idr.h:15,
                 from /home/vs/whamcloud/lustre-release/libcfs/libcfs/../../lustre_compat/mm/shrinker_debug.c:8:
/home/vs/whamcloud/lustre-release/libcfs/libcfs/../../lustre_compat/mm/shrinker_debug.c: In function 'll_shrinker_create':
/home/vs/whamcloud/lustre-release/libcfs/libcfs/../../lustre_compat/mm/shrinker_debug.c:268:33: error: 's' undeclared (first use in this function); did you mean 's8'?
  268 |         LIBCFS_ALLOC(s, sizeof(*s));
      |                                 ^

--- Comment (gerrit, Wed, 20 Aug 2025 03:06:55 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/60352/

Subject: LU-19080 compat: match kernel shrinker protocol

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 3ccd941e2de36a2d791268111c381c72f0afa11e

--- Comment (gerrit, Thu, 24 Jul 2025 19:55:47 +0000) ---
"James Simmons " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/60352

Subject: LU-19080 compact: match kernel shrinker protocol

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 41e8a8229cdb2148499fd17342d83b8035bf0923

--- Comment (vsaveliev, Tue, 3 Jun 2025 16:00:35 +0000) ---
ll_shrinker_create() does not compile for 5.14.0-503.40.1

With CONFIG_SHRINKER_DEBUG=y

--- Comment (gerrit, Mon, 2 Jun 2025 12:06:51 +0000) ---
"Vladimir Saveliev " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/59519

Subject: LU-19080 shrinker: make ll_shrinker_create() compilable

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 76ed203a574de500bc6a1fdadc9b147666641850
